# migration-atlas

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  claude.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: README.md  index.html  package.json  vercel.json  vite.config.js
app/src/: App.jsx  api.js  constants.js  fallbackData.js  styles.css
app/src/components/: CountrySelector.jsx  DetailPanel.jsx  ErrorBoundary.jsx  FilterPanel.jsx  ForecastChart.jsx  Graph.jsx  HorizonControl.jsx  NavBar.jsx  QueryBar.jsx  Skeleton.jsx
app/src/views/: About.jsx  Atlas.jsx  Discourse.jsx  Forecast.jsx  Library.jsx  NotFound.jsx  Simulate.jsx  Timeline.jsx
configs/: embeddings.yaml  forecast.yaml  rag.yaml  sentiment.yaml  stance.yaml
data/: README.md
deploy/hf-spaces/: Dockerfile  README.md
docs/: architecture.md  data-sources.md  index.md
docs/case-study/: findings.md  index.md  introduction.md  limitations.md  literature.md  methodology.md  references.md
docs/case-study/countries/: china.md  cuba.md  el-salvador.md  india.md  mexico.md
docs/deploy/: hf-spaces.md  neo4j.md  vercel.md
docs/models/: embeddings.md  forecaster.md  index.md  rag.md  stance.md
docs/reference/: api.md
notebooks/: 01_eda.ipynb  02_stance_training.ipynb  03_forecasting.ipynb  04_graph_embeddings.ipynb
scripts/: regen_fallback.py
src/migration_atlas/: __init__.py  cli.py
src/migration_atlas/api/: main.py
src/migration_atlas/data/: __init__.py  country_codes.py  download.py  ingest_corpus.py  process.py
src/migration_atlas/data/sources/: __init__.py  bls.py  census_acs.py  hate_speech.py  historical_press.py  manifesto.py  mpi.py  pew.py  uscis_yearbook.py  voteview.py
src/migration_atlas/graph/: __init__.py  build.py  schema.py  seed.py
src/migration_atlas/models/: __init__.py  forecaster.py  graph_embeddings.py  rag.py  stance_classifier.py
src/migration_atlas/models/discourse/: __init__.py  sentiment.py
src/migration_atlas/nlp/: __init__.py  router.py
src/migration_atlas/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_api.py  test_build.py  test_data_sources.py  test_nlp_router.py  test_schema.py
